--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,18 +1,29 @@
 server {
-  listen 80;
-  server_name localhost;
+    listen 80;
 
-  location / {
-    proxy_pass http://nuxt-shell:3000;
-  }
+    location / {
+        proxy_pass http://shell:3000;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
 
-  location /mf1/ {
-    proxy_pass http://microfrontend-1:3001/;
-    proxy_set_header Host $host;
-  }
+    location /tour/ {
+        proxy_pass http://mfe-tour:3000/tour/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
 
-  location /mf2/ {
-    proxy_pass http://microfrontend-2:3002/;
-    proxy_set_header Host $host;
-  }
+    location /tour/_nuxt/ {
+        proxy_pass http://mfe-tour:3000/tour/_nuxt/;
+    }
+
+    location /visa/ {
+        proxy_pass http://mfe-visa:3000/visa/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    location /visa/_nuxt/ {
+        proxy_pass http://mfe-visa:3000/visa/_nuxt/;
+    }
 }
